--- a/assets/css/booking.css
+++ b/assets/css/booking.css
@@ -14,12 +14,13 @@ main {
   width: 6rem;
   height: 6rem;
   padding: 0;
+  margin-left: 2rem;
   border-radius: 50%;
   background: var(--green);
   color: white;
   font-size: 2.5rem;
   margin-bottom: 5rem;
-  display: none;
+  /* display: none; */
 }
 
 .search-btn {
