--- a/assets/css/booking.css
+++ b/assets/css/booking.css
@@ -196,6 +196,12 @@ main {
   justify-content: space-between;
   margin: 1rem 0px;
 }
+.booking-details .block .item1 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1rem 0px;
+}
 .booking-details .block .item p {
   font-weight: 500;
 }
@@ -205,6 +211,8 @@ main {
   justify-content: space-between;
   width: 100%;
 }
+
+
 .booking-details .block .item > div span {
   font-size: 1.6rem;
   font-weight: 500;
