--- a/assets/css/buss.css
+++ b/assets/css/buss.css
@@ -149,7 +149,7 @@
 .wraper-item table {
   width: 100%;
 }
-table {
+/* table {
   border-collapse: collapse;
   border-radius: 1rem;
   overflow: hidden;
@@ -171,7 +171,7 @@ th {
 }
 td {
   background: var(--lite-gray);
-}
+} */
 .wraper-item select {
   width: 100%;
   height: 5rem;
