--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@ header .links {
     align-items: center;
     justify-content: space-between;
     gap: 3rem;
+    text-decoration: none;
 }
 
 .logo {
@@ -593,8 +594,7 @@ header .links {
 /* footer */
 footer {
     background: var(--secoundary);
-    padding: 5rem 0;
-    padding-bottom: 2rem;
+    padding: 2rem;
 }
 
 footer p,
@@ -728,6 +728,7 @@ footer p {
         background: var(--black);
         backdrop-filter: blur(10px);
         transition: 0.5s;
+        text-decoration: none;
         transform: translateX(100%);
     }
 
@@ -859,12 +860,11 @@ footer p {
 }
 
 
-.table {
+/* .table {
     width: 100%;
     margin-bottom: 1rem;
     color: black;
     vertical-align: top;
-    /*border-color: var(--bs-table-border-color);*/
     caption-side: bottom;
     border-collapse: collapse;
 }
@@ -877,7 +877,6 @@ footer p {
 
 .table > tbody, td, tfoot, th, thead, tr {
     border-color: inherit;
-    /*border-style: solid;*/
     border-width: 0;
 }
 
@@ -885,7 +884,6 @@ footer p {
     padding: .5rem .5rem;
     background-color: white;
     border-bottom-width: 1px;
-    /*box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);*/
 }
 
 .table-sm > :not(caption) > * > * {
@@ -894,7 +892,7 @@ footer p {
 
 .table > tbody {
     vertical-align: inherit;
-}
+} */
 
 .swal2-container {
     z-index: 9999999;
