--- a/assets/css/booking.css
+++ b/assets/css/booking.css
@@ -11,14 +11,14 @@ main {
   display: block;
 }
 .search-ag {
-  width: 6rem;
-  height: 6rem;
+  width: 13rem;
+  height: 4rem;
   padding: 0;
   margin-left: 2rem;
-  border-radius: 50%;
+  border-radius: 5px;
   background: var(--green);
   color: white;
-  font-size: 2.5rem;
+  font-size: 9pt;
   margin-bottom: 5rem;
   float: left;
   /* display: none; */
